# parallel-factorial

./: Cargo.toml  README.md  default.nix
.github/workflows/: rust.yml
benches/: factorial_benchmark.rs
nix/: sources.json
src/: lib.rs  main.rs
