[package]
name = "parallel-factorial"
version = "0.2.1"
authors = ["Gary Moore <madmangaz@gmail.com>"]
license = "MIT"
description = "Simple, fast, parallel factorial calculator."
keywords = ["factorial"]
categories = ["Command line utilities", "Algorithms"]
repository = "https://github.com/doggodoge/parallel-factorial"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
ibig = "0.3.4"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "factorial_benchmark"
harness = false
